--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ h1{
     text-align: center;
     margin: 40px;
     padding:30px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 
